force-app/main/default/objects/leaseworks__LLP_Catalog_Summary__c/leaseworks__LLP_Catalog_Summary__c.object-meta.xml
<CustomObject>
    <label>LLP Price Catalog Summary</label>
    <nameField>
        <label>Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LLP Price Catalog Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>