force-app/main/default/objects/leaseworks__LLP_Catalog_Summary__c/fields/leaseworks__Esc_Factor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Esc_Factor__c</fullName>
    <formula>if( leaseworks__Prev_LLP_Cat_Sum__r.leaseworks__Cost_Per_Cycle__c==0 ||  leaseworks__Cost_Per_Cycle__c ==0,null,  
   1.0 + (leaseworks__Cost_Per_Cycle__c - leaseworks__Prev_LLP_Cat_Sum__r.leaseworks__Cost_Per_Cycle__c)/leaseworks__Prev_LLP_Cat_Sum__r.leaseworks__Cost_Per_Cycle__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Esc Factor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>