force-app/main/default/objects/leaseworks__LLP_Catalog_Summary__c/fields/leaseworks__Prev_LLP_Cat_Sum__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prev_LLP_Cat_Sum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prev LLP Catalog Summary</label>
    <referenceTo>leaseworks__LLP_Catalog_Summary__c</referenceTo>
    <relationshipLabel>Next LLP Price Catalog Summary</relationshipLabel>
    <relationshipName>LLP_Catalog_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>