force-app/main/default/objects/leaseworks__LLP_Catalog_Summary__c/fields/leaseworks__Prev_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prev_Total_Cost__c</fullName>
    <description>Total cost of the Previous LLP Price Catalog Summary</description>
    <formula>leaseworks__Prev_LLP_Cat_Sum__r.leaseworks__Total_Cost__c</formula>
    <label>Prev Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>